--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>calvinbot</name>
+	<name>CalvingHobbesTelegramBot</name>
 	<description>Calvin and Hobbes Bot</description>
 
 	<parent>
